Quorum3/Library/Tests/Actions/Pass/SimpleOneActionNoParamsReturnNumber.quorum
class Main
    action Main
        number d = GetNumber()
        output d
    end

    action GetNumber returns number
        return 5.0
    end
end