Quorum3/Library/Tests/Actions/Fail/HOCReturnIntFromCalledProcedureWrongType1.quorum
action Main
    a = B()
end

action B returns text
    return 3.0
end